:memo: Docs: Manually edit docs

--- a/docs/node/docs/pages/getting-started/testimonials.mdx
+++ b/docs/node/docs/pages/getting-started/testimonials.mdx
@@ -1,20 +1,21 @@
 ---
-title: Testimonials
+title: Community & Testimonials
 description: What developers and industry leaders are saying about Tevm Node
 authors:
   - "[Tevm Team](https://github.com/evmts)"
 ---
 
-import { Callout, Button } from 'vocs/components'
+import { Callout, Button } from "vocs/components";
 
-# Community Testimonials
+# Community
 
-Here's what the community is saying about Tevm
+Here's what developers and industry leaders are saying about Tevm
 
-## From Industry Leaders
+## Community Highlights
 
 :::tip[Developer Feedback]
-Tevm's unique approach of bringing Ethereum execution directly to JavaScript environments has resonated with developers across the web3 space.
+Tevm's unique approach of bringing Ethereum execution directly to JavaScript environments has resonated with most developers who have given Tevm a try.
+Developers report problems previously difficult being simple to solve with Tevm
 :::
 
 <div style={{ 
@@ -52,34 +53,252 @@ Tevm's unique approach of bringing Ethereum execution directly to JavaScript env
     </div>
   </div>
 
-  <div style={{ 
-    border: '1px solid var(--vocs-color_border)', 
-    borderRadius: 'var(--vocs-borderRadius_4)', 
-    padding: '1.5rem',
-    backgroundColor: 'var(--vocs-color_background2)'
-  }}>
-    <blockquote style={{ 
-      margin: 0, 
-      fontSize: 'var(--vocs-fontSize_16)',
-      borderLeft: 'none',
-      padding: 0
-    }}>
-      "If you're building a blockchain application on the web, I'm almost certain there is a use case for Tevm. It might change everything, and at worse it would most likely improve your devX."
-    </blockquote>
-    <div style={{ 
-      marginTop: '1rem', 
-      display: 'flex', 
-      alignItems: 'center',
-      gap: '0.5rem'
-    }}>
-      <div style={{ fontWeight: 'var(--vocs-fontWeight_medium)' }}>
-        polarzero
-      </div>
-      <a href="https://twitter.com/0xpolarzero" style={{ fontSize: 'var(--vocs-fontSize_14)', color: 'var(--vocs-color_textAccent)' }}>
-        @0xpolarzero
-      </a>
-    </div>
+{" "}
+<div
+  style={{
+    border: "1px solid var(--vocs-color_border)",
+    borderRadius: "var(--vocs-borderRadius_4)",
+    padding: "1.5rem",
+    backgroundColor: "var(--vocs-color_background2)",
+  }}
+>
+  <blockquote
+    style={{
+      margin: 0,
+      fontSize: "var(--vocs-fontSize_16)",
+      borderLeft: "none",
+      padding: 0,
+    }}
+  >
+    "If you're building a blockchain application on the web, I'm almost certain
+    there is a use case for Tevm. It might change everything, and at worse it
+    would most likely improve your devX."
+  </blockquote>
+  <div
+    style={{
+      marginTop: "1rem",
+      display: "flex",
+      alignItems: "center",
+      gap: "0.5rem",
+    }}
+  >
+    <div style={{ fontWeight: "var(--vocs-fontWeight_medium)" }}>polarzero</div>
+    <a
+      href="https://twitter.com/0xpolarzero"
+      style={{
+        fontSize: "var(--vocs-fontSize_14)",
+        color: "var(--vocs-color_textAccent)",
+      }}
+    >
+      @0xpolarzero
+    </a>
   </div>
+</div>
+
+{" "}
+<div
+  style={{
+    border: "1px solid var(--vocs-color_border)",
+    borderRadius: "var(--vocs-borderRadius_4)",
+    padding: "1.5rem",
+    backgroundColor: "var(--vocs-color_background2)",
+  }}
+>
+  <blockquote
+    style={{
+      margin: 0,
+      fontSize: "var(--vocs-fontSize_16)",
+      borderLeft: "none",
+      padding: 0,
+    }}
+  >
+    "Yeah, using bundling tools like Tevm with Viem offers a very nice
+    experience here."
+  </blockquote>
+  <div
+    style={{
+      marginTop: "1rem",
+      display: "flex",
+      alignItems: "center",
+      gap: "0.5rem",
+    }}
+  >
+    <div style={{ fontWeight: "var(--vocs-fontWeight_medium)" }}>jxom</div>
+    <a
+      href="https://twitter.com/_jxom"
+      style={{
+        fontSize: "var(--vocs-fontSize_14)",
+        color: "var(--vocs-color_textAccent)",
+      }}
+    >
+      @_jxom
+    </a>
+  </div>
+</div>
+<div
+  style={{
+    border: "1px solid var(--vocs-color_border)",
+    borderRadius: "var(--vocs-borderRadius_4)",
+    padding: "1.5rem",
+    backgroundColor: "var(--vocs-color_background2)",
+  }}
+>
+  <blockquote
+    style={{
+      margin: 0,
+      fontSize: "var(--vocs-fontSize_16)",
+      borderLeft: "none",
+      padding: 0,
+    }}
+  >
+    "Incredible! And also very cursed haha"
+  </blockquote>
+  <div
+    style={{
+      marginTop: "1rem",
+      display: "flex",
+      alignItems: "center",
+      gap: "0.5rem",
+    }}
+  >
+    <div style={{ fontWeight: "var(--vocs-fontWeight_medium)" }}>
+      Darryl Yeo・d/acc
+    </div>
+    <a
+      href="https://twitter.com/darryl__yeo"
+      style={{
+        fontSize: "var(--vocs-fontSize_14)",
+        color: "var(--vocs-color_textAccent)",
+      }}
+    >
+      @darryl__yeo
+    </a>
+  </div>
+</div>
+
+{" "}
+<div
+  style={{
+    border: "1px solid var(--vocs-color_border)",
+    borderRadius: "var(--vocs-borderRadius_4)",
+    padding: "1.5rem",
+    backgroundColor: "var(--vocs-color_background2)",
+  }}
+>
+  <blockquote
+    style={{
+      margin: 0,
+      fontSize: "var(--vocs-fontSize_16)",
+      borderLeft: "none",
+      padding: 0,
+    }}
+  >
+    "tevm is the accessible version of reth exex for data engineers"
+  </blockquote>
+  <div
+    style={{
+      marginTop: "1rem",
+      display: "flex",
+      alignItems: "center",
+      gap: "0.5rem",
+    }}
+  >
+    <div style={{ fontWeight: "var(--vocs-fontWeight_medium)" }}>ilemi</div>
+    <a
+      href="https://twitter.com/andrewhong5297"
+      style={{
+        fontSize: "var(--vocs-fontSize_14)",
+        color: "var(--vocs-color_textAccent)",
+      }}
+    >
+      @andrewhong5297
+    </a>
+  </div>
+</div>
+
+{" "}
+<div
+  style={{
+    border: "1px solid var(--vocs-color_border)",
+    borderRadius: "var(--vocs-borderRadius_4)",
+    padding: "1.5rem",
+    backgroundColor: "var(--vocs-color_background2)",
+  }}
+>
+  <blockquote
+    style={{
+      margin: 0,
+      fontSize: "var(--vocs-fontSize_16)",
+      borderLeft: "none",
+      padding: 0,
+    }}
+  >
+    "Helios 🤝 Tevm"
+  </blockquote>
+  <div
+    style={{
+      marginTop: "1rem",
+      display: "flex",
+      alignItems: "center",
+      gap: "0.5rem",
+    }}
+  >
+    <div style={{ fontWeight: "var(--vocs-fontWeight_medium)" }}>
+      ncitron.eth
+    </div>
+    <a
+      href="https://twitter.com/NoahCitron"
+      style={{
+        fontSize: "var(--vocs-fontSize_14)",
+        color: "var(--vocs-color_textAccent)",
+      }}
+    >
+      @NoahCitron
+    </a>
+  </div>
+</div>
+
+{" "}
+<div
+  style={{
+    border: "1px solid var(--vocs-color_border)",
+    borderRadius: "var(--vocs-borderRadius_4)",
+    padding: "1.5rem",
+    backgroundColor: "var(--vocs-color_background2)",
+  }}
+>
+  <blockquote
+    style={{
+      margin: 0,
+      fontSize: "var(--vocs-fontSize_16)",
+      borderLeft: "none",
+      padding: 0,
+    }}
+  >
+    "Please tell me this is a shitpost"
+  </blockquote>
+  <div
+    style={{
+      marginTop: "1rem",
+      display: "flex",
+      alignItems: "center",
+      gap: "0.5rem",
+    }}
+  >
+    <div style={{ fontWeight: "var(--vocs-fontWeight_medium)" }}>
+      Patrick Collins
+    </div>
+    <a
+      href="https://twitter.com/PatrickAlphaC"
+      style={{
+        fontSize: "var(--vocs-fontSize_14)",
+        color: "var(--vocs-color_textAccent)",
+      }}
+    >
+      @PatrickAlphaC
+    </a>
+  </div>
+</div>
 
   <div style={{ 
     border: '1px solid var(--vocs-color_border)', 
@@ -93,7 +312,7 @@ Tevm's unique approach of bringing Ethereum execution directly to JavaScript env
       borderLeft: 'none',
       padding: 0
     }}>
-      "Yeah, using bundling tools like Tevm with Viem offers a very nice experience here."
+      "I don't know if I should be impressed or scared"
     </blockquote>
     <div style={{ 
       marginTop: '1rem', 
@@ -102,42 +321,19 @@ Tevm's unique approach of bringing Ethereum execution directly to JavaScript env
       gap: '0.5rem'
     }}>
       <div style={{ fontWeight: 'var(--vocs-fontWeight_medium)' }}>
-        jxom
+        James
       </div>
-      <a href="https://twitter.com/_jxom" style={{ fontSize: 'var(--vocs-fontSize_14)', color: 'var(--vocs-color_textAccent)' }}>
-        @_jxom
+      <a href="https://twitter.com/lcm_in_pangea" style={{ fontSize: 'var(--vocs-fontSize_14)', color: 'var(--vocs-color_textAccent)' }}>
+        @lcm_in_pangea
       </a>
     </div>
   </div>
 </div>
 
-## Community Highlights
-
-:::details[See more developer testimonials]
-> "Incredible! And also very cursed haha"
-> 
-> — **Darryl Yeo・d/acc** ([@darryl__yeo](https://twitter.com/darryl__yeo))
-
-> "tevm is the accessible version of reth exex for data engineers"
-> 
-> — **ilemi** ([@andrewhong5297](https://twitter.com/andrewhong5297))
-
-> "Helios 🤝 Tevm"
-> 
-> — **ncitron.eth** ([@NoahCitron](https://twitter.com/NoahCitron))
-
-> "@FUCORY is building tevm.sh—one of the most egalitarian things I've seen. It's insanely ambitious, and if it works, can really reshape the fabric of society."
-> 
-> — **Emmanuel Awosika (eth/acc)⚡** ([@eawosikaa](https://twitter.com/eawosikaa))
-
-> "I don't know if I should be impressed or scared"
-> 
-> — **James** ([@lcm_in_pangea](https://twitter.com/lcm_in_pangea))
-:::
-
 ## Share Your Experience
 
 ::::steps
+
 ### Join the Community
 
 We'd love to hear how Tevm has improved your development workflow:
@@ -151,11 +347,13 @@ Have a compelling use case or success story?
 
 - [Create an issue](https://github.com/evmts/tevm-monorepo/issues/new?labels=testimonial&template=testimonial.md) with the label "testimonial"
 - Email the team at support@tevm.sh
-::::
+  ::::
 
 Your feedback helps us improve Tevm and guides our development priorities!
 
-<div style={{ display: 'flex', gap: '1rem', marginTop: '2rem' }}>
-  <Button href="./overview" variant="accent">← Back to Overview</Button>
+<div style={{ display: "flex", gap: "1rem", marginTop: "2rem" }}>
+  <Button href="./overview" variant="accent">
+    ← Back to Overview
+  </Button>
   <Button href="./viem">Continue to Viem Integration →</Button>
 </div>
