--- a/docs/node/docs/pages/getting-started/overview.mdx
+++ b/docs/node/docs/pages/getting-started/overview.mdx
@@ -6,146 +6,37 @@ authors:
   - "[Tevm Team](https://github.com/evmts)"
 ---
 
-import { Callout, Steps, Button } from 'vocs/components'
+import { Callout, Steps, Button } from "vocs/components";
 
 # Tevm Node Overview
 
 Tevm Node is a **full Ethereum execution environment** that runs natively in JavaScript. It provides the complete functionality of an Ethereum node without requiring any blockchain client installation.
 
-:::tip[Ready to dive in?]
-If you already know how to use `viem` or `ethers`, you can start using Tevm Node right away with your existing knowledge!
+Conceptually, it works very similar to Anvil and Hardhat but with more powerful TypeScript native interop.
+
+:::tip[You might not need these docs?]
+If you already know how to use `viem` or `ethers`, you can start using Tevm Node right away with your existing knowledge! Tevm simply plugs into your library of choice.
 :::
 
 ## What Makes Tevm Unique?
 
 Unlike traditional development environments like [Hardhat](https://hardhat.org/) or [Anvil](https://book.getfoundry.sh/anvil/), Tevm Node offers several distinct advantages:
 
-::::code-group
-```ts [Universal JS] twoslash
-// @noErrors
-// Runs in browsers, Node.js, Deno, Bun and beyond
-// Zero native dependencies
-import { createMemoryClient } from 'tevm'
-
-const client = createMemoryClient()
-//    ^?
-
-// Works even in serverless environments!
-export async function handler() {
-  await client.getBalance({ 
-    address: '0x...'
-  })
-}
-```
-
-```ts [Direct Integration] twoslash
-// @noErrors
-// Uses the libraries you already know and love
-import { createMemoryClient } from 'tevm'
-
-// For viem users
-import { parseEther } from 'viem'
-const viemClient = createMemoryClient()
-await viemClient.setBalance({
-  address: '0xA0Cf...251e',
-  value: parseEther('1000')
-})
-
-// For ethers users
-import { ethers } from 'ethers'
-const ethersProvider = viemClient.asEthersProvider()
-await ethersProvider.getBalance('0xA0Cf...251e')
-```
-
-```ts [EVM Control] twoslash
-// @noErrors
-// Complete access to the EVM execution environment
-import { createTevmNode } from 'tevm'
-
-const node = await createTevmNode()
-const vm = await node.getVm()
-
-// Listen to EVM execution steps (opcodes)
-vm.evm.events.on("step", (data, next) => {
-  console.log(
-    `PC: ${data.pc}`, // program counter
-    `Opcode: ${data.opcode.name}`, // executing opcode
-    `Stack: ${data.stack.slice(-3)}` // last 3 stack items
-  )
-  next?.()
-})
-```
-::::
-
+- **Cross-Platform Compatibility** — The same code works everywhere JavaScript runs, with zero native dependencies including your applications in the browser
 - **Fine-grained EVM Control** — Access the execution environment at any level of detail, from high-level transactions to individual EVM opcodes
 - **Enhanced User Experience** — Enable advanced features like instantaneous gas estimation, optimistic UI updates, and sophisticated transaction simulation
-- **Cross-Platform Compatibility** — The same code works everywhere JavaScript runs, with zero native dependencies
 - **Type-safe Interactions** — Full TypeScript support throughout the entire API surface
-
-## Quick Example
-
-Here's a complete example showing how to deploy, write to, and read from a smart contract with Tevm:
-
-```ts showLineNumbers {1,11-13,22} filename="simple-contract.ts"
-import { createMemoryClient, PREFUNDED_ACCOUNTS } from 'tevm' // [!code focus]
-import { SimpleContract } from 'tevm/contract'
-
-// Create an in-memory Ethereum client
-const client = createMemoryClient()
-
-// Create contract instance
-const contract = SimpleContract.withAddress(`0x${'40'.repeat(20)}`)
-
-// Deploy contract bytecode
-await client.setCode({
-  address: contract.address, // [!code focus]
-  bytecode: contract.deployedBytecode, // [!code focus]
-}) // [!code focus]
-
-// Write to contract
-await client.writeContract({
-  account: PREFUNDED_ACCOUNTS[0],
-  abi: contract.abi,
-  functionName: 'set',
-  args: [420n],
-  address: contract.address,
-})
-
-await client.tevmMine() // [!code focus]
-
-// Read from contract
-const value = await client.readContract({
-  abi: contract.abi,
-  functionName: 'get',
-  address: contract.address,
-})
-
-console.log(value) // 420n
-```
-
-:::details[How it works]
-1. We create a `memoryClient` that runs an Ethereum node entirely in memory
-2. We define a contract and its address
-3. We deploy the contract using `setCode` (simpler than a full deployment transaction)
-4. We write to the contract using a familiar viem-style interface
-5. We mine the transaction to include it in a block
-6. We read the updated value from the contract
-:::
-
-### Key Points:
-
-- **Familiar Interface** — Tevm uses [viem](https://viem.sh) as its primary API, making it instantly familiar to viem users
-- **In-Memory Execution** — TevmNode runs the Ethereum environment directly in memory rather than using JSON-RPC over HTTP
-- **Full Control** — Mine blocks on demand, manipulate state, and more
 
 ## Getting Started
 
 ::::steps
+
 ### Install Tevm
 
 First, install Tevm in your project:
 
 :::code-group
+
 ```bash [npm]
 npm install tevm
 ```
@@ -161,6 +52,7 @@ yarn add tevm
 ```bash [bun]
 bun add tevm
 ```
+
 :::
 
 ### Choose Your Client
@@ -169,39 +61,162 @@ Tevm offers different client types depending on your needs:
 
 ```ts
 // In-memory client (fastest, fully isolated)
-import { createMemoryClient } from 'tevm'
-const memoryClient = createMemoryClient()
+import { createMemoryClient } from "tevm";
+const memoryClient = createMemoryClient();
 
 // Fork client (use existing chain state)
-import { createMemoryClient, http } from 'tevm'
-import { mainnet } from 'tevm/chains'
+import { createMemoryClient } from "tevm";
+import { http } from "viem";
+import { mainnet } from "tevm/chains";
 const forkClient = createMemoryClient({
   fork: {
-    transport: http('https://eth-mainnet.g.alchemy.com/v2/YOUR_API_KEY'),
-    common: mainnet
-  }
-})
+    transport: http("https://eth-mainnet.g.alchemy.com/v2/YOUR_API_KEY"),
+    common: mainnet,
+  },
+});
+
+// Tree-shakable client (lighter weight)
+import { createClient, http, custom } from "viem";
+import { createTevmNode } from "tevm";
+import { optimism } from "tevm/common";
+import { eip1193Request } from "tevm/decorators";
+const node = createTevmNode({
+  fork: {
+    transport: http("https://mainnet.optimism.io"),
+    common: optimism,
+  },
+}).extend(eip1193Request());
+const client = createClient({
+  transport: custom(node),
+});
+import { getBlockNumber } from "viem";
+await getBlockNumber(client);
+
+// Ethers client
+import { TevmProvider } from "tevm/ethers";
+import { http, toHex, parseEth } from "tevm";
+const provider = await TevmProvider.createMemoryProvider({
+  fork: {
+    transport: http("https://mainnet.optimism.io"),
+  },
+});
+await provider.send("tevm_setAccount", [
+  {
+    address: `0x${"69".repeat(20)}`,
+    nonce: toHex(1),
+    balance: toHex(parseEth("25")),
+  },
+]);
 ```
+
+### Use your client to read and write to an in-memory blockchain
+
+Below is a complete typical flow of using Tevm to:
+
+1. Add a contract to the Tevm state
+2. Write to the contract with viem
+3. Mine a new block with the transaction
+4. Read from contract with viem
+
+```ts showLineNumbers {1,11-13,22} filename="simple-contract.ts"
+import { createMemoryClient, PREFUNDED_ACCOUNTS } from "tevm";
+import { http } from "viem";
+import { SimpleContract } from "tevm/contract";
+import { optimism } from "tevm/common";
+
+// Create an in-memory Ethereum client forking optimism
+const client = createMemoryClient({
+  common: optimism,
+  fork: { transport: http("https://mainnet.optimism.io") },
+});
+
+const contract = SimpleContract.withAddress(`0x${"40".repeat(20)}`);
+
+// Deploy contract bytecode. There are many ways to do this including tevmDeploy.
+// Here we just use an anvil test action
+await client.setCode({
+  address: contract.address,
+  bytecode: contract.deployedBytecode,
+});
+
+// Write to contract
+await client.writeContract({
+  account: PREFUNDED_ACCOUNTS[0],
+  abi: contract.abi,
+  functionName: "set",
+  args: [420n],
+  address: contract.address,
+});
+
+await client.tevmMine();
+
+// Read from contract
+const value = await client.readContract({
+  abi: contract.abi,
+  functionName: "get",
+  address: contract.address,
+});
+
+console.log(value); // 420n
+```
+
+:::details[How it works]
+
+1. We create a `memoryClient` that runs an Ethereum node entirely in memory
+2. We define a contract and its address
+3. We deploy the contract using `setCode` (simpler than a full deployment transaction)
+4. We write to the contract using a familiar viem-style interface
+5. We mine the transaction to include it in a block
+6. We read the updated value from the contract
+   :::
+
+### Key Points:
+
+- **Familiar Interface** — Tevm uses [viem](https://viem.sh) as its primary API, making it instantly familiar to viem users
+- **In-Memory Execution** — TevmNode runs the Ethereum environment directly in memory rather than using JSON-RPC over HTTP
+- **Full Control** — Mine blocks on demand, manipulate state, and more
 
 ### Start Building
 
 You're now ready to build with Tevm!
 
 ```ts
-// Set up a test account with ETH
-import { parseEther } from 'viem'
-const account = "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
-await client.setBalance({
-  address: account,
-  value: parseEther("100")
-})
+// Runs in browsers, Node.js, Deno, Bun and beyond
+// Zero native dependencies
+import { createMemoryClient } from "tevm";
+// Optionally import solidity contracts directly into typescript in a typesafe way
+import { ComplexSimulation } from "../contracts/ComplexSimulation.s.sol";
 
-// Read account balance
-const balance = await client.getBalance({
-  address: account
-})
-console.log(`Balance: ${balance}`)
+const client = createMemoryClient();
+
+// Use the viem api you already know
+console.log(await client.getBlockNumber());
+
+// Or use powerful typescript native apis
+const {
+  data,
+  error,
+  logs,
+  createdAddresses,
+  executionGasUsed,
+  l1Fee,
+  trace,
+  accessList,
+  txHash,
+} = await client.tevmContract({
+  deployedBytecode: ComplexSimulation.deployedBytecode,
+  ...ComplexSimulation.read.simulate(2n, "arg2"),
+  createTrace: true,
+  createAccessList: true,
+  createTransaction: true,
+  throwOnFail: false,
+  onStep: (step, next) => {
+    console.log(step.opcode);
+    next?.();
+  },
+});
 ```
+
 ::::
 
 ## Learning Path
@@ -209,16 +224,26 @@ console.log(`Balance: ${balance}`)
 If you're new to Ethereum development, don't worry! Tevm serves as an excellent learning platform for both Ethereum and TypeScript:
 
 :::info
+
 - **Isolated Environment** — Experiment freely without worrying about network costs or confirmation times
 - **TypeScript Integration** — Get full type safety and autocomplete for Ethereum interactions
 - **Simple API Surface** — Focus on learning core concepts with a streamlined interface
 - **Step Debugger** — Trace transaction execution at the opcode level for deep understanding
-:::
+  :::
 
-## Next Steps
+## Ready to dive in right away?
 
-<div style={{ display: 'flex', gap: '1rem', marginTop: '1.5rem', flexWrap: 'wrap' }}>
-  <Button href="./viem" variant="accent">Viem Quickstart →</Button>
+<div
+  style={{
+    display: "flex",
+    gap: "1rem",
+    marginTop: "1.5rem",
+    flexWrap: "wrap",
+  }}
+>
+  <Button href="./viem" variant="accent">
+    Viem Quickstart →
+  </Button>
   <Button href="./ethers">Ethers Quickstart →</Button>
   <Button href="../introduction/what-is-tevm-node">What is Tevm Node? →</Button>
 </div>
