--- a/docs/node/docs/pages/index.mdx
+++ b/docs/node/docs/pages/index.mdx
@@ -2,8 +2,8 @@
 layout: landing
 ---
 
-import { Button, HomePage } from 'vocs/components'
-import { Card } from '../../components'
+import { Button, HomePage } from "vocs/components";
+import { Card } from "../../components";
 
 <HomePage.Root>
   <div style={{ textAlign: 'center', margin: '0 auto', maxWidth: '200px' }}>
@@ -13,8 +13,16 @@ import { Card } from '../../components'
       style={{ width: '100%', height: 'auto' }}
     />
   </div>
-  <HomePage.Tagline>Powerful Ethereum Node and Solidity Compiler for TypeScript Applications</HomePage.Tagline>
+  <HomePage.Tagline>Ethereum Node for Viem</HomePage.Tagline>
   <HomePage.InstallPackage name="tevm" type="install" />
+
+{" "}
+
+<HomePage.Description>
+  An Ethereum Node built to run in Browser, Bun, Deno, and Node.js
+</HomePage.Description>
+
+{" "}
 
   <div className="code-snippet" style={{
     maxWidth: '600px',
@@ -26,94 +34,109 @@ import { Card } from '../../components'
     textAlign: 'left'
   }}>
     ```ts
-    import { createMemoryClient } from 'tevm'
+    // @noErrors
+    // Runs in browsers, Node.js, Deno, Bun and beyond
+    // Zero native dependencies
+    import { createMemoryClient } from "tevm";
+    import { ComplexSimulation } from "../contracts/ComplexSimulation.s.sol";
 
-    // Create a complete Ethereum environment in one line
-    const client = createMemoryClient()
+    const client = createMemoryClient();
 
-    // Execute EVM transactions locally with type safety
-    const result = await client.call({
-      account: '0x123...',
-      to: '0x456...',
-      data: '0x...'
-    })
+    // Use powerful TypeScript native APIs or use the viem APIs you already know
+    const {
+      data,
+      error,
+      logs,
+      createdAddresses,
+      executionGasUsed,
+      l1Fee,
+      trace,
+      accessList,
+      txHash,
+    } = await client.tevmContract({
+      deployedBytecode: ComplexSimulation.deployedBytecode,
+      ...ComplexSimulation.read.simulate(2n, "arg2"),
+      createTrace: true,
+      createAccessList: true,
+      createTransaction: true,
+      throwOnFail: false,
+      onStep: (step, next) => {
+        console.log(step.opcode);
+        next?.();
+      },
+    });
     ```
+
   </div>
 
-  <HomePage.Description>A full Ethereum node in JavaScript - browser, Node.js, or anywhere that plugs into Viem enabling new Use cases for Ethereum applications in TypeScript</HomePage.Description>
-
-  <HomePage.Buttons>
-    <HomePage.Button href="/getting-started/overview" variant="accent">Get started</HomePage.Button>
-    <HomePage.Button href="/examples/viem">Viem Guide</HomePage.Button>
-    <HomePage.Button href="/introduction/what-is-tevm-node">Learn More</HomePage.Button>
-  </HomePage.Buttons>
+<HomePage.Buttons>
+  <HomePage.Button href="/getting-started/overview" variant="accent">
+    Get started
+  </HomePage.Button>
+  <HomePage.Button href="/examples/viem">Viem Guide</HomePage.Button>
+  <HomePage.Button href="/introduction/what-is-tevm-node">
+    Learn More
+  </HomePage.Button>
+</HomePage.Buttons>
 
   <div className="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 max-w-[900px] mx-auto my-12">
     <Card title="JavaScript-Native EVM">
-      <p className="mb-4">Run a complete Ethereum environment directly in browsers, Node.js, Deno, or serverless - with zero native dependencies. Perfect for development, testing, and production.</p>
+      <p className="mb-4">Run an Ethereum environment anywhere JavaScript runs.</p>
       <Button href="/introduction/why-run-ethereum-in-js" variant="text" size="small">Why JavaScript? →</Button>
     </Card>
 
-    <Card title="10-25x Faster Than Remote Calls">
-      <p className="mb-4">Execute transactions locally without network roundtrips. Get instant gas estimates, simulate complex transactions, and build responsive dApps with local execution.</p>
+    <Card title="Up to 10x Faster Than Remote Calls">
+      <p className="mb-4">Execute transactions locally without network roundtrips. Instant gas estimates for responsive dApps.</p>
       <Button href="/introduction/why-run-ethereum-in-js#performance--efficiency" variant="text" size="small">Performance Benefits →</Button>
     </Card>
 
     <Card title="Import Solidity Files Directly">
-      <p className="mb-4">Use .sol files as native ES modules with full TypeScript type safety. Access NatSpec documentation and interact with contracts using familiar patterns.</p>
+      <p className="mb-4">Use .sol files as native ES modules with full TypeScript type safety.</p>
       <Button href="https://tevm.sh/bundler/direct-solidity-imports" variant="text" size="small">Bundler Integration →</Button>
     </Card>
 
-    <Card title="Fork Any Chain in Your Browser">
-      <p className="mb-4">Create instant local copies of Ethereum, Optimism, or any EVM chain - directly in your browser. Test against real contracts and state without external tools like Anvil or Hardhat.</p>
+    <Card title="Fork Any Chain">
+      <p className="mb-4">Create instant local copies of Ethereum, Optimism, or any EVM chain. Use against real contracts and state without external tools like Anvil or Hardhat.</p>
       <Button href="/core/forking" variant="text" size="small">Forking Guide →</Button>
     </Card>
 
     <Card title="EVM Execution Hooks">
-      <p className="mb-4">Intercept and modify EVM execution at the opcode level. Build advanced tools like debuggers, tracers, or custom gas profilers with complete visibility into each execution step.</p>
+      <p className="mb-4">Plug into EVM execution at the opcode level. Build advanced tools like debuggers, tracers, or custom gas profilers.</p>
       <Button href="/api/evm-events" variant="text" size="small">EVM Hooks Guide →</Button>
     </Card>
 
     <Card title="Works With Tools You Know">
-      <p className="mb-4">Native integration with viem and full compatibility with ethers.js, web3.js, wagmi, and any EIP-1193 library. Your existing code just works.</p>
+      <p className="mb-4">Native integration with viem and full compatibility with ethers.js, wagmi, and any EIP-1193 library.</p>
       <Button href="/introduction/what-is-tevm-node#library-compatibility" variant="text" size="small">Library Support →</Button>
     </Card>
+
   </div>
 
   <div className="max-w-[800px] mx-auto my-12 p-8 bg-gray-50 dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700">
-    <h2 className="text-center mt-0 mb-6">What Developers Are Saying</h2>
-
-    <div className="grid grid-cols-1 md:grid-cols-2 gap-8">
+    <div className="grid grid-cols-1">
       <blockquote className="m-0 text-base border-l-4 border-blue-500 pl-4">
-        "If you're building a blockchain application on the web, I'm almost certain there is a use case for Tevm. It might change everything, and at worse it would most likely improve your devX."
+        "If you're building a blockchain application on the web, I'm almost certain there is a use case for Tevm. It might change everything, and at worst it would most likely improve your devX."
         <div className="mt-3 font-medium">
           polarzero
           <a href="https://twitter.com/0xpolarzero" className="text-sm text-blue-500 ml-2">@0xpolarzero</a>
         </div>
       </blockquote>
-
-      <blockquote className="m-0 text-base border-l-4 border-blue-500 pl-4">
-        "Fully @tevmtools pilled now. The beauty and harmony of the dev tooling 😍."
-        <div className="mt-3 font-medium">
-          EulerLagrange.eth - ver/acc
-          <a href="https://twitter.com/Euler__Lagrange" className="text-sm text-blue-500 ml-2">@Euler__Lagrange</a>
-        </div>
-      </blockquote>
     </div>
 
-    <div className="text-center mt-8">
-      <Button href="/getting-started/testimonials" variant="outline">See More Testimonials</Button>
-    </div>
   </div>
 
-  <div className="max-w-[600px] mx-auto my-8 text-center">
-    <h2>Ready to get started?</h2>
-    <div className="flex gap-4 justify-center flex-wrap">
-      <Button href="/getting-started/overview" variant="accent">Installation Guide</Button>
-      <Button href="/examples/viem">Viem Integration</Button>
-      <Button href="/examples/ethers">Ethers Integration</Button>
-    </div>
+{" "}
+
+<div className="max-w-[600px] mx-auto my-8 text-center">
+  <h2>Ready to get started?</h2>
+  <div className="flex gap-4 justify-center flex-wrap">
+    <Button href="/getting-started/overview" variant="accent">
+      Installation Guide
+    </Button>
+    <Button href="/examples/viem">Viem Integration</Button>
+    <Button href="/examples/ethers">Ethers Integration</Button>
   </div>
+</div>
 
   <div className="mt-12 text-sm opacity-80">
     Here's our <a href="https://node.tevm.sh/llms-full.txt">documentation as plain text</a> for providing context to LLM systems
