--- a/docs/node/docs/pages/introduction/why-run-ethereum-in-js.mdx
+++ b/docs/node/docs/pages/introduction/why-run-ethereum-in-js.mdx
@@ -6,8 +6,8 @@ authors:
   - "[Tevm Team](https://github.com/evmts)"
 ---
 
-import { Callout, Steps, Button } from 'vocs/components'
-import { Card, TabGroup, FileTree } from '../../../components'
+import { Callout, Steps, Button } from "vocs/components";
+import { Card, TabGroup, FileTree } from "../../../components";
 
 # Why Run Ethereum in JavaScript?
 
@@ -17,32 +17,30 @@ JavaScript has emerged as an ideal environment for running Ethereum, offering un
 
 <div className="grid grid-cols-1 sm:grid-cols-2 gap-4 my-6">
   <Card title="⚡ Zero Network Latency">
-    <p>Running the EVM locally eliminates round-trip delays to remote nodes, enabling near-instantaneous transaction simulations and gas estimations.</p>
+    <p>
+      Running the EVM locally eliminates round-trip delays to remote nodes,
+      enabling near-instantaneous transaction simulations and gas estimations.
+    </p>
   </Card>
-  
-  <Card title="🔄 Parallel Simulations">
-    <p>Simulate multiple transactions or execution paths concurrently, impossible with traditional RPC calls to remote nodes.</p>
+
+  <Card title="🔄 Powerful JS interop">
+    <p>
+      Simulate multiple transactions plugging directly into the evm with JS or
+      even writing custom contracts in JS.
+    </p>
   </Card>
 </div>
 
 ### Real-World Performance Benefits
 
 <Callout type="info" title="Performance Comparison">
-  Tevm's local execution provides 10-25x faster operation than remote JSON-RPC calls
+  Tevm's local execution provides instantanious gas estimation!
 </Callout>
 
 ```typescript showLineNumbers {1-4,8-11} filename="performance-comparison.ts"
-// Traditional approach (with network latency)
-const gasEstimate1 = await provider.estimateGas({ ... }) // ~150-500ms
-const gasEstimate2 = await provider.estimateGas({ ... }) // ~150-500ms
-const gasEstimate3 = await provider.estimateGas({ ... }) // ~150-500ms
-// Total: 450-1500ms
-
-// With Tevm (local execution)
-const gasEstimate1 = await client.estimateGas({ ... }) // ~5-20ms // [!code focus]
-const gasEstimate2 = await client.estimateGas({ ... }) // ~5-20ms // [!code focus]
-const gasEstimate3 = await client.estimateGas({ ... }) // ~5-20ms // [!code focus]
-// Total: 15-60ms (10-25x faster) // [!code focus]
+const gasEstimate0 = await provider.estimateGas({ ... }) // ~200ms as it fetches state
+const gasEstimate0 = await provider.estimateGas({ ... }) // ~Instant on future estimations with cache saved
+const gasEstimate0 = await provider.estimateGas({ ... }) // ~Instant on future estimations with cache saved
 ```
 
 ## Enhanced User Experiences
@@ -51,30 +49,48 @@ JavaScript-based EVM execution enables entirely new categories of dApp features:
 
 <div className="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 my-6">
   <Card title="📱 Offline Capabilities">
-    <p>Enable local-first applications that work without constant network connectivity.</p>
+    <p>
+      Enable local-first applications that work without constant network
+      connectivity.
+    </p>
   </Card>
-  
-  <Card title="⚡ Optimistic UI">
-    <p>Show users the likely outcome of transactions before they're mined on-chain.</p>
-  </Card>
-  
-  <Card title="🛡️ Improved Reliability">
-    <p>Reduce dependency on external infrastructure, making dApps more resilient.</p>
-  </Card>
-  
-  <Card title="🧮 Transaction Simulation">
-    <p>Simulate complex interactions and preview results before sending transactions.</p>
-  </Card>
-  
+
+{" "}
+
+<Card title="⚡ Optimistic UI">
+  <p>
+    Show users the likely outcome of transactions before they're mined on-chain.
+  </p>
+</Card>
+
+{" "}
+
+<Card title="🛡️ Improved Reliability">
+  <p>
+    Reduce dependency on external infrastructure, making dApps more resilient.
+  </p>
+</Card>
+
+{" "}
+
+<Card title="🧮 Transaction Simulation">
+  <p>
+    Simulate complex interactions and preview results before sending
+    transactions.
+  </p>
+</Card>
+
   <Card title="🔐 Enhanced Privacy">
-    <p>Process sensitive data locally without sending it to external services.</p>
+    <p>
+      Process sensitive data locally without sending it to external services.
+    </p>
   </Card>
 </div>
 
 ## Developer Experience Advantages
 
 <Steps>
-  ### Advanced Debugging 🔬
+   ### Advanced Debugging 🔬
   
   Step through EVM execution opcode by opcode, inspect memory and stack, and see exactly what happens in your contracts.
   
@@ -91,28 +107,28 @@ JavaScript-based EVM execution enables entirely new categories of dApp features:
   })
   ```
 
-  ### Deterministic Testing 🧪
-  
-  Create fully reproducible environments for testing with complete control over blockchain state, time, and mining.
-  
-  ```typescript filename="testing-example.ts"
-  // Create a snapshot before test
-  const snapshotId = await client.tevmSnapshot()
-  
-  // Run the test
-  await client.setBalance({ address: testAccount, value: parseEther("100") })
-  await client.sendTransaction({ ... })
-  await client.mine({ blocks: 1 })
-  const result = await client.call({ ... })
-  
-  // Restore state after test
-  await client.tevmRevert({ snapshotId })
-  ```
+### Deterministic Testing 🧪
 
-  ### Portable Environment 💼
-  
-  The same Ethereum environment works across Node.js, browsers, serverless functions, and other JavaScript runtimes.
-  
+Create fully reproducible environments for testing with complete control over blockchain state, time, and mining.
+
+```typescript filename="testing-example.ts"
+// Create a snapshot before test
+const snapshotId = await client.tevmSnapshot()
+
+// Run the test
+await client.setBalance({ address: testAccount, value: parseEther("100") })
+await client.sendTransaction({ ... })
+await client.mine({ blocks: 1 })
+const result = await client.call({ ... })
+
+// Restore state after test
+await client.tevmRevert({ snapshotId })
+```
+
+### Portable Environment 💼
+
+The same Ethereum environment works across Node.js, browsers, serverless functions, and other JavaScript runtimes.
+
   <TabGroup items={['Browser', 'Node.js', 'Serverless']}>
     <div data-title="Browser">
       ```ts
@@ -168,39 +184,68 @@ JavaScript-based EVM execution enables entirely new categories of dApp features:
   </TabGroup>
 </Steps>
 
+## Solidity Imports
+
+Tevm Bundler (optional feature) creates the best devx for working with solidity files in TypeScript
+
+```typescript
+// Import solidity files directly into TS files
+import { MyContract } from "./MyContract.sol";
+```
+
+The devx is optimized in following ways:
+
+- Natspec on hover
+- Typesafe contract
+- TRPC like experience. You will see red underlines before you even save a solidity file
+- No need to set up external build tools. Plugs directly into your existing js pipeline
+
 ## JavaScript Ecosystem Integration
 
 <Callout type="note" title="Seamless Integration">
-  Running Ethereum in JavaScript means you can leverage the entire JavaScript ecosystem effortlessly.
+  Running Ethereum in JavaScript means you can leverage the entire JavaScript
+  ecosystem effortlessly.
 </Callout>
 
 <div className="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 my-6">
   <Card title="🔤 TypeScript">
     <p>Type-safe contract interactions with full IntelliSense support</p>
   </Card>
-  
-  <Card title="⚛️ UI Frameworks">
-    <p>React, Vue, Svelte and other frontend libraries</p>
-  </Card>
-  
-  <Card title="🏗️ Build Tools">
-    <p>Vite, Webpack, ESBuild and other bundlers</p>
-  </Card>
-  
-  <Card title="🧪 Testing">
-    <p>Jest, Vitest and other testing frameworks</p>
-  </Card>
-  
-  <Card title="🔄 Runtimes">
-    <p>Node.js, browsers, Electron, serverless functions</p>
-  </Card>
-  
-  <Card title="📦 NPM Ecosystem">
-    <p>Access to millions of packages and libraries in the npm registry</p>
-  </Card>
-  
+
+{" "}
+
+<Card title="⚛️ UI Frameworks">
+  <p>React, Vue, Svelte and other frontend libraries</p>
+</Card>
+
+{" "}
+
+<Card title="🏗️ Build Tools">
+  <p>Vite, Webpack, ESBuild and other bundlers</p>
+</Card>
+
+{" "}
+
+<Card title="🧪 Testing">
+  <p>Vitest support via Vite</p>
+</Card>
+
+{" "}
+
+<Card title="🔄 Runtimes">
+  <p>Node.js, browsers, Electron, serverless functions</p>
+</Card>
+
+{" "}
+
+<Card title="📦 NPM Ecosystem">
+  <p>Access to millions of packages and libraries in the npm registry</p>
+</Card>
+
   <Card title="🌐 Web APIs">
-    <p>Integration with browser storage, WebSockets, service workers, and more</p>
+    <p>
+      Integration with browser storage, WebSockets, service workers, and more
+    </p>
   </Card>
 </div>
 
@@ -209,13 +254,20 @@ JavaScript-based EVM execution enables entirely new categories of dApp features:
 <FileTree>
   <FileTree.Folder name="Getting Started Guide" defaultOpen>
     <FileTree.File name="Install Tevm" url="../getting-started/overview" />
-    <FileTree.File name="Configure Your Environment" url="../core/create-tevm-node" />
+    <FileTree.File
+      name="Configure Your Environment"
+      url="../core/create-tevm-node"
+    />
     <FileTree.File name="Run Your First Code" url="../examples/viem" />
   </FileTree.Folder>
 </FileTree>
 
 <div className="flex flex-wrap gap-4 mt-8">
-  <Button href="../getting-started/overview" variant="accent" size="large">Install Tevm →</Button>
+  <Button href="../getting-started/overview" variant="accent" size="large">
+    Install Tevm →
+  </Button>
   <Button href="../examples/viem">View Examples</Button>
-  <Button href="https://github.com/evmts/tevm-monorepo" variant="outline">GitHub Repo</Button>
+  <Button href="https://github.com/evmts/tevm-monorepo" variant="outline">
+    GitHub Repo
+  </Button>
 </div>
